<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">



   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ProgressBar
           android:id="@+id/pg_detail"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_centerInParent="true" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <androidx.cardview.widget.CardView
               android:layout_margin="8dp"
               app:cardCornerRadius="15dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <TextView
                       android:background="#edebeb"
                       android:id="@+id/date_detail"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_horizontal"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       android:textColor="@android:color/black"
                       android:layout_margin="16dp"
                       tools:text = "20 DESEMBER 2019 / UTC + 7"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <ImageView
                           android:id="@+id/img_home_detail"
                           android:layout_weight="3"
                           android:layout_width="0dp"
                           android:layout_height="80dp"
                           android:maxWidth="80dp"
                           android:layout_marginStart="16dp"
                           tools:src = "@drawable/ic_launcher_background"
                           tools:ignore="ContentDescription" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_weight="3"

                           android:gravity="center_horizontal"
                           android:textColor="@android:color/black"
                           android:textSize="25sp"
                           android:layout_marginTop="16dp"
                           android:text="@string/vs"
                           tools:text="VS" />

                       <ImageView
                           android:id="@+id/img_away_detail"
                           android:layout_weight="3"
                           android:layout_marginEnd="16dp"
                           android:layout_width="0dp"
                           android:maxWidth="80dp"
                           android:layout_height="80dp"
                           tools:src ="@drawable/ic_launcher_background"
                           tools:ignore="ContentDescription" />


                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal" >

                       <TextView
                           android:layout_margin="16dp"
                           android:id="@+id/nameHomeDetail"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="start"
                           android:layout_weight="5"
                           tools:text = "Arsenal" />

                       <TextView
                           android:layout_margin="16dp"
                           android:id="@+id/nameAwayDetail"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:gravity="end"
                           tools:text = "Arsenal" />


                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal" >

                       <TextView
                           android:layout_margin="16dp"
                           android:id="@+id/scoreHomeDetail"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="start"
                           android:layout_weight="5"
                           android:textColor="@android:color/black"
                           android:textSize="30sp"
                           android:textStyle="bold"
                           android:layout_marginStart="16dp"
                           android:paddingStart="16dp"
                           tools:text = "0"
                           tools:ignore="RtlSymmetry" />

                       <TextView
                           android:layout_margin="16dp"
                           android:paddingEnd="16dp"
                           android:id="@+id/scoreAwayDetail"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:gravity="end"
                           android:textColor="@android:color/black"
                           android:textSize="30sp"
                           android:textStyle="bold"
                           android:layout_marginStart="16dp"
                           tools:text = "0"
                           tools:ignore="RtlSymmetry" />


                   </LinearLayout>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <View
               android:layout_width="match_parent"
               android:layout_height="3dp"
               android:layout_margin="16dp"
               android:background="@android:color/black"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/goals"
               android:gravity="center_horizontal"
               android:textStyle="bold"
               android:textSize="20sp"
               android:textColor="@android:color/black"
               android:fontFamily="sans-serif-black"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="3dp"
               android:layout_margin="16dp"
               android:background="@android:color/black"/>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               app:cardCornerRadius="15dp"
               android:layout_margin="8dp"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/goalHomeTeam"
                       android:layout_weight="3"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:gravity="start"
                       android:layout_marginStart="16dp"
                       tools:text="Goalkeeper Home Team"
                       android:layout_margin="8dp"
                       />


                   <TextView
                       android:layout_margin="8dp"
                       android:id="@+id/goalAwayTeam"
                       android:layout_weight="3"
                       android:layout_marginEnd="16dp"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:gravity="end"
                       tools:text="Goalkeeper Away Team"/>


               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <View
               android:layout_width="match_parent"
               android:layout_height="3dp"
               android:layout_margin="16dp"
               android:background="@android:color/black"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/lineup"
               android:gravity="center_horizontal"
               android:textStyle="bold"
               android:textSize="20sp"
               android:textColor="@android:color/black"
               android:fontFamily="sans-serif-black"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="3dp"
               android:layout_margin="16dp"
               android:background="@android:color/black"/>

           <androidx.cardview.widget.CardView
               android:layout_marginBottom="16dp"
               android:layout_width="match_parent"
               app:cardCornerRadius="15dp"
               android:layout_margin="8dp"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:id="@+id/gkHomeTeam"
                           android:layout_weight="4"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="left"
                           android:layout_marginStart="8dp"
                           tools:text="Goalkeeper Home Team"
                           android:layout_marginBottom="16dp"
                           tools:ignore="RtlHardcoded" />

                       <TextView
                           android:layout_weight="2"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center_horizontal"
                           android:text="@string/goalkeeper"
                           android:textStyle="bold"
                           android:textSize="20sp"
                           android:layout_marginBottom="16dp"
                           android:textColor="@android:color/black"/>


                       <TextView
                           android:id="@+id/gkAwayTeam"
                           android:layout_weight="4"
                           android:layout_marginEnd="8dp"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="end"
                           android:layout_marginBottom="16dp"
                           tools:text="Goalkeeper Away Team"/>


                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:id="@+id/defHomeTeam"
                           android:layout_weight="4"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="left"
                           android:layout_marginStart="8dp"
                           tools:text="Defender Home Team"
                           android:layout_marginBottom="16dp"
                           tools:ignore="RtlHardcoded" />

                       <TextView
                           android:layout_weight="2"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center_horizontal"
                           android:text="@string/defense"
                           android:textStyle="bold"
                           android:textSize="20sp"
                           android:layout_marginBottom="16dp"
                           android:textColor="@android:color/black"/>


                       <TextView
                           android:id="@+id/defAwayTeam"
                           android:layout_weight="4"
                           android:layout_marginEnd="8dp"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="end"
                           android:layout_marginBottom="16dp"
                           tools:text="Defender Away Team"/>


                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:id="@+id/midHomeTeam"
                           android:layout_weight="4"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="left"
                           android:layout_marginStart="8dp"
                           android:layout_marginBottom="16dp"
                           tools:text="Midfielder Home Team"
                           tools:ignore="RtlHardcoded" />

                       <TextView
                           android:layout_weight="2"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center_horizontal"
                           android:text="@string/midfield"
                           android:textStyle="bold"
                           android:textSize="20sp"
                           android:layout_marginBottom="16dp"
                           android:textColor="@android:color/black"/>


                       <TextView
                           android:id="@+id/midAwayTeam"
                           android:layout_weight="4"
                           android:layout_marginEnd="8dp"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="end"
                           android:layout_marginBottom="16dp"
                           tools:text="Midfielder Away Team"/>


                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:id="@+id/fowHomeTeam"
                           android:layout_weight="4"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="left"
                           android:layout_marginStart="8dp"
                           tools:text="Foward Home Team"
                           android:layout_marginBottom="16dp"
                           tools:ignore="RtlHardcoded" />

                       <TextView
                           android:layout_weight="2"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center_horizontal"
                           android:text="@string/foward"
                           android:textStyle="bold"
                           android:textSize="20sp"
                           android:layout_marginBottom="16dp"
                           android:textColor="@android:color/black"/>


                       <TextView
                           android:id="@+id/fowAwayTeam"
                           android:layout_weight="4"
                           android:layout_marginEnd="8dp"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="end"
                           android:layout_marginBottom="16dp"
                           tools:text="Foward Away Team"/>


                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:id="@+id/subHomeTeam"
                           android:layout_weight="4"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="left"
                           android:layout_marginStart="8dp"
                           tools:text="Substition Home Team"
                           android:layout_marginBottom="16dp"
                           tools:ignore="RtlHardcoded" />

                       <TextView
                           android:layout_weight="2"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center_horizontal"
                           android:text="@string/substitutes"
                           android:textStyle="bold"
                           android:textSize="20sp"
                           android:layout_marginBottom="16dp"
                           android:textColor="@android:color/black"/>


                       <TextView
                           android:id="@+id/subAwayTeam"
                           android:layout_weight="4"
                           android:layout_marginEnd="8dp"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:gravity="end"
                           android:layout_marginBottom="16dp"
                           tools:text="Substition Away Team"/>


                   </LinearLayout>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <Button
               android:layout_margin="16dp"
               android:id="@+id/button_fav"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/add_to_favorite"
               tools:text="Add To Favorite" />

       </LinearLayout>

   </RelativeLayout>



</ScrollView>